--- a/app/static/css/general_style.css
+++ b/app/static/css/general_style.css
@@ -14,6 +14,7 @@
   --content-nested-padding: 1.25rem;
   --outline-width: 1px;
   --header-height: 50px;
+  --gap: 0.8rem;
 
   --header-left-item-size: 35px;
   --header-right-item-size: 25px;
